--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,10 +1,9 @@
-/* Nested hover
-change button color on hover */
+// 6-nested_hover.scss
 
 button {
     color: #FF0000;
-
+  
     &:hover {
-        color: #00FF00;
+      color: #00FF00;
     }
-}
+  }
