--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,9 +1,7 @@
-// 6-nested_hover.scss
-
+/* change button color on hover*/
 button {
     color: #FF0000;
-  
     &:hover {
-      color: #00FF00;
+        color: #00FF00;
     }
-  }
+}
