--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,5 +1,4 @@
-// This file assigns text color #FF0000 to button tags and changes the text color to #00FF00 when the user hovers over button tags.
-
+// This file assigns text color #FF0000 to button tags and ch
 button {
     color: #FF0000;
     &:hover {
